--- a/index.html
+++ b/index.html
@@ -217,9 +217,9 @@
             <!-- 中间盒子分布 -->
 
             <div class="row centerBox">
-                <div class="box1 col-md-5 ml-md-3 mr-md-4 mb-md-4" style=" height: 160px;">1</div>
-                <div class="box2 col-md mr-md-3" style=" height: 160px;">2</div>
-                <div class="box3 col-md-11 mx-md-3" style=" height: 200px;">
+                <div class="box1 col-md-5 ml-md-3 mr-md-4 mb-md-4 mt-md-3" style=" height: 160px;">1</div>
+                <div class="box2 col-md mr-md-3 mt-md-3" style=" height: 160px;">2</div>
+                <div class="box3 col-md-11 mx-md-3" style=" height: 220px;">
                     <h6 class "computer">该页面暂时请用电脑端查看</h6>
                 </div>
                 <div class="box4 col-md mt-md-4 ml-md-3" style=" height: 100px;">4</div>
